...
        ) {
            if (!columnExists(tableName, columnName)) {
                db.execSQL("ALTER TABLE $tableName ADD COLUMN $columnName $columnType")
            }
        }

        addColumnIfNotExists(db, "Workout", "userId")
        addColumnIfNotExists(db, "ExerciseLog", "userId")
        addColumnIfNotExists(db, "SetLog", "userId")

        addColumnIfNotExists(db, "programmes", "userId")
        addColumnIfNotExists(db, "programme_weeks", "userId")
        addColumnIfNotExists(db, "programme_workouts", "userId")
...
